design for global interview

--- a/main/main.html
+++ b/main/main.html
@@ -43,15 +43,15 @@
                                     <div class="elem-smallTitle">36% done</div>
                                 </td>
                                 <td>
-                                    <div class="elem-pills d-inline-block done"></div>
-                                    <div class="elem-pills d-inline-block done"></div>
-                                    <div class="elem-pills d-inline-block onTime"></div>
-                                    <div class="elem-pills d-inline-block onTime"></div>
-                                    <div class="elem-pills d-inline-block delayed"></div>
-                                    <div class="elem-pills d-inline-block delayed"></div>
-                                    <div class="elem-pills d-inline-block major"></div>
-                                    <div class="elem-pills d-inline-block major"></div>
-                                    <div class="elem-pills d-inline-block major"></div>
+                                    <div aria-label="lol" class="elem-pills d-inline-block done"></div>
+                                    <div aria-label="lol" class="elem-pills d-inline-block done"></div>
+                                    <div aria-label="lol" class="elem-pills d-inline-block onTime"></div>
+                                    <div aria-label="lol" class="elem-pills d-inline-block onTime"></div>
+                                    <div aria-label="lol" class="elem-pills d-inline-block delayed"></div>
+                                    <div aria-label="lol" class="elem-pills d-inline-block delayed"></div>
+                                    <div aria-label="lol" class="elem-pills d-inline-block major"></div>
+                                    <div aria-label="lol" class="elem-pills d-inline-block major"></div>
+                                    <div aria-label="lol" class="elem-pills d-inline-block major"></div>
                                 </td>
                             </tr>
                         </tbody>
@@ -113,6 +113,39 @@
                 <div id="overview">
                     <div class="elem-mainTitle">
                         Global overview
+                        <div class="p-1">
+                            <div class="elem-card done">
+                                <div class="elem-card-title">8%</div>
+                                <div class="elem-card-subTitle">commited</div>
+                            </div>
+                            <div class="elem-card delayed">
+                                <div class="elem-card-title">33%</div>
+                                <div class="elem-card-subTitle">willing</div>
+                            </div>
+                            <div class="elem-card delayed">
+                                <div class="elem-card-title">8%</div>
+                                <div class="elem-card-subTitle">able</div>
+                            </div>
+                            <div class="elem-card delayed">
+                                <div class="elem-card-title">36%</div>
+                                <div class="elem-card-subTitle">hesitant</div>
+                            </div>
+                            <div class="elem-card major">
+                                <div class="elem-card-title">15%</div>
+                                <div class="elem-card-subTitle">resistant</div>
+                            </div>
+                            <div class="elem-vertical-separator"></div>
+
+                            <div class="elem-card objective">
+                                <div class="elem-card-title">49%</div>
+                                <div class="elem-card-subTitle">aware</div>
+                            </div>
+                            <div class="elem-card obtained">
+                                <div class="elem-card-title">51%</div>
+                                <div class="elem-card-subTitle">unware</div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 <div class="row">
