--- a/Radar.html
+++ b/Radar.html
@@ -10,18 +10,18 @@
     <select class="center">
         <option value="nothing"> -- WorkStream -- </option>
     </select>
-    <canvas id="marksChart" width="600" height="400"></canvas>
+    <canvas id="radarChart" width="600" height="400"></canvas>
 </div>
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
 <script>
     document.addEventListener("DOMContentLoaded", () => {
-        let marksCanvas = document.getElementById("marksChart");
-        initChart(marksCanvas);
+        let radarCanvas = document.getElementById("radarChart");
+        initRadarChart(radarCanvas);
     });
 
-    function initChart(marksCanvas) {
+    function initRadarChart(radarCanvas) {
         let marksData = {
             labels: ["Leadership", "Roadmap", "Infrastructure", "Workforce", "Strategic Value", "Personal drive"],
             datasets: [{
