fixing colors :art:

--- a/main/main.html
+++ b/main/main.html
@@ -92,17 +92,7 @@
                 <div id="benefits">
                     <div class="elem-mainTitle">
                         Spot 2023 gross benefits (M€)
-                        <div class="elem-legendWithPuce">
-                            <div class="d-inline-block">
-                                <li class="elem-listElem px-2 objective">Done</li>
-                            </div>
-                            <div class="d-inline-block">
-                                <li class="elem-listElem px-2 expected">In progress - On time</li>
-                            </div>
-                            <div class="d-inline-block">
-                                <li class="elem-listElem px-2 obtained">In progress - Delayed</li>
-                            </div>
-                        </div>
+                        <canvas id="barChart" width="400" height="400"></canvas>
                     </div>
                 </div>
                 <div id="investments">
@@ -136,11 +126,11 @@
                             </div>
                             <div class="elem-vertical-separator"></div>
 
-                            <div class="elem-card objective">
+                            <div class="elem-card aware">
                                 <div class="elem-card-title">49%</div>
                                 <div class="elem-card-subTitle">aware</div>
                             </div>
-                            <div class="elem-card obtained">
+                            <div class="elem-card unware">
                                 <div class="elem-card-title">51%</div>
                                 <div class="elem-card-subTitle">unware</div>
                             </div>
