--- a/main/main.html
+++ b/main/main.html
@@ -8,6 +8,7 @@
     <title>DashBoardSATT</title>
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="../public/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/circle.min.css">
 </head>
 
 <body>
@@ -58,33 +59,202 @@
                     </table>
                 </div>
                 <div id="action">
-                    <div class="elem-mainTitle">
-                        Energy from waste
+                    <div class="elem-action">
+                        <div class="elem-mainTitle">
+                            Energy from waste
+                        </div>
+                        <table class="table table-layout-fixed">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Opex/t</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 done">43€/ton</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">OEE steam production</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 major">85%</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Turbine relative availability</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 done">80%</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Steam ratio</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 major">60%</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
-                    <table class="table">
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <div class="elem-subTitle">Direct procurement</div>
-                                </td>
-                                <td>
-                                    <div class="d-inline-block">
-                                        <li class="elem-listElem px-2 done">Done</li>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <div class="elem-subTitle">Direct procurement</div>
-                                </td>
-                                <td>
-                                    <div class="d-inline-block">
-                                        <li class="elem-listElem px-2 major">Major road block</li>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="elem-action">
+                        <div class="elem-mainTitle">
+                            Landfill
+                        </div>
+                        <table class="table table-layout-fixed">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Opex/t</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 done">19€/t</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Daily cover</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 major">12%</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Global compaction</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 done">0.97</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Waste placement</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 major">95 tons/hour</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="elem-action">
+                        <div class="elem-mainTitle">
+                            Mechanical sorting
+                        </div>
+                        <table class="table table-layout-fixed">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Production costs/t</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 done">120€/t</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Unplanned stops</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 major">5.5% of operating time</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Throughput</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 done">9 meters/second</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">OEE</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 major">68%</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="elem-action">
+                        <div class="elem-mainTitle">
+                            Collection
+                        </div>
+                        <table class="table table-layout-fixed">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Collection costs</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 done">22.6€/order</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Truck utilization</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 major">8h/day/truck</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Productivity</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 done">500kg/order</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="elem-subTitle">Fuel consumption</div>
+                                    </td>
+                                    <td>
+                                        <div class="d-inline-block">
+                                            <p class="px-2 major">2.8% order</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
             <div class="col-md-7 col-sm-12">
@@ -98,6 +268,64 @@
                 <div id="investments">
                     <div class="elem-mainTitle">
                         Spot 2023 investments
+                    </div>
+                    <div class="text-center d-flex justify-content-between">
+                        <div class="elem-circlePercentage">
+                            <span class="elem-circlePercentage-header">28%</span>
+                            <div class="c100 p28 small float-none">
+                                <span class="elem-circlePercentage-body">4,73M€</span>
+                                <div class="slice">
+                                    <div class="bar"></div>
+                                    <div class="fill"></div>
+                                </div>
+                            </div>
+                            <span class="elem-circlePercentage-footer">Procurement </span>
+                        </div>
+                        <div class="elem-circlePercentage">
+                            <span class="elem-circlePercentage-header">65%</span>
+                            <div class="c100 p65 small float-none">
+                                <span class="elem-circlePercentage-body">12,54 M€</span>
+                                <div class="slice">
+                                    <div class="bar"></div>
+                                    <div class="fill"></div>
+                                </div>
+                            </div>
+                            <span class="elem-circlePercentage-footer">Municipal water</span>
+                        </div>
+                        <div class="elem-circlePercentage">
+                            <span class="elem-circlePercentage-header">43%</span>
+                            <div class="c100 p43 small float-none">
+                                <span class="elem-circlePercentage-body">5,28 M€</span>
+                                <div class="slice">
+                                    <div class="bar"></div>
+                                    <div class="fill"></div>
+                                </div>
+                            </div>
+                            <span class="elem-circlePercentage-footer">R&R</span>
+                        </div>
+                        <div class="elem-circlePercentage">
+                            <span class="elem-circlePercentage-header">70%</span>
+                            <div class="c100 p70 small float-none">
+                                <span class="elem-circlePercentage-body">8,10M €</span>
+                                <div class="slice">
+                                    <div class="bar"></div>
+                                    <div class="fill"></div>
+                                </div>
+                            </div>
+                            <span class="elem-circlePercentage-footer">TI</span>
+                        </div>
+
+                        <div class="elem-circlePercentage">
+                            <span class="elem-circlePercentage-header">23%</span>
+                            <div class="c100 p23 small float-none">
+                                <span class="elem-circlePercentage-body">2,33M €</span>
+                                <div class="slice">
+                                    <div class="bar"></div>
+                                    <div class="fill"></div>
+                                </div>
+                            </div>
+                            <span class="elem-circlePercentage-footer">WTS</span>
+                        </div>
                     </div>
                 </div>
                 <div id="overview">
@@ -156,6 +384,30 @@
                         <div id="insights" class="col-md-12 col-sm-12">
                             <div class="elem-mainTitle">
                                 Insights
+                            </div>
+                            <div class="elem-horizontalCard card border-success my-2">
+                                <div class="card-body elem-horizontalCard-body">
+                                    <img class="elem-logo" src="../public/icons/green-check.svg">
+                                    The
+                                    <b>[ABC] BU</b>
+                                    scores
+                                    <b>7,1% higher</b>
+                                    than the organisations's
+                                    <b>Workforce</b>
+                                    average
+                                </div>
+                            </div>
+                            <div class="elem-horizontalCard card border-danger my-2">
+                                <div class="card-body">
+                                    <img class="" src="../public/icons/red-alert.svg">
+                                    The
+                                    <b>[ABC] BU</b>
+                                    scores
+                                    <b>7,1% higher</b>
+                                    than the organisations's
+                                    <b>Workforce</b>
+                                    average
+                                </div>
                             </div>
                         </div>
                     </div>
